API Definition to create subscriptions to notifications feed
